Added second steams task